@@ -1,5 +1,6 @@
 config BR2_PACKAGE_USBUTILS
 	bool "usbutils"
+	select BR2_PACKAGE_LIBUSB
 	select BR2_PACKAGE_LIBUSB_COMPAT
 	help
 	  USB enumeration utilities
