@@ -4,8 +4,8 @@
 #
 #############################################################
 
-USBUTILS_VERSION = 0.86
-USBUTILS_SITE = http://$(BR2_SOURCEFORGE_MIRROR).dl.sourceforge.net/sourceforge/linux-usb/
+USBUTILS_VERSION = 0.87
+USBUTILS_SITE = $(BR2_KERNEL_MIRROR)/linux/utils/usb/usbutils
 USBUTILS_DEPENDENCIES = host-pkg-config libusb-compat
 
 ifeq ($(BR2_PACKAGE_USBUTILS_ZLIB),y)
@@ -24,5 +24,8 @@ ifeq ($(BR2_PACKAGE_USBUTILS_ZLIB),y)
 	rm -f $(TARGET_DIR)/usr/share/usb.ids
 else
 	rm -f $(TARGET_DIR)/usr/share/usb.ids.gz
+endif
+ifneq ($(BR2_HAVE_DEVFILES),y)
+	rm -f $(TARGET_DIR)/usr/bin/libusb-config
 endif
 	touch $@
